[CG] strokeRect does not honor lineJoin https://bugs.webkit.org/show_bug.cgi?id=132948

Patch by Nikos Andronikos <nikos.andronikos-webkit@cisra.canon.com.au> on 2014-08-05
Reviewed by Darin Adler.

Source/WebCore:

Replaced use of CGContextStrokeRectWithWidth convenience function with explicit
call to CGContextAddRect and CGContextStrokePath.  The convenience functions
CGContextStrokeRect and CGContextStrokeRectWithWidth fail to apply some attributes
(e.g. stroke join) of the graphics state in certain cases.

Test: fast/canvas/canvas-strokeRect-lineJoin.html

* platform/graphics/cg/GraphicsContextCG.cpp:
(WebCore::GraphicsContext::strokeRect):

LayoutTests:

Test behavior of canvas with stroke rect with line join

* fast/canvas/canvas-strokeRect-lineJoin-expected.txt: Added.
* fast/canvas/canvas-strokeRect-lineJoin.html: Added.
* fast/canvas/script-tests/canvas-strokeRect-lineJoin.js: Added.
* platform/mac-mountainlion/canvas/philip/tests/2d.strokeRect.zero.5-expected.txt: Added.
* platform/mac/fast/canvas/canvas-strokeRect-alpha-shadow-expected.txt: Removed.

Canonical link: https://commits.webkit.org/153496@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172119 268f45cc-cd09-0410-ab3c-d52691b4dbfc